--- a/templates/register.html
+++ b/templates/register.html
@@ -51,6 +51,11 @@
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
+
+        <div class="text-center">
+            <br>
+            <a href="/login">Already have an account? Log in here</a>
+        </div>
     </div>
 </body>
 
