--- a/templates/showAI.html
+++ b/templates/showAI.html
@@ -5,11 +5,11 @@
     <title>{{ cv_data_constant.fullName }}'s Resume</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Segoe+UI" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
     <style>
         body {
-            font-family: 'Segoe UI', sans-serif;
-            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 20px;
             padding: 0;
             font-size: 16px;
             color: #444;
@@ -20,8 +20,26 @@
             max-width: 800px;
             margin: auto;
             background: #fff;
+            font-size: 10pt;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .page {
+            width: 210mm;
+            /* Approx A4 width */
+            min-height: 297mm;
+            /* Approx A4 height */
+            padding: 25mm 15mm;
+            /* Top and bottom margins */
+            box-sizing: border-box;
+            page-break-after: always;
+            /* Ensure each .page starts a new PDF page */
+        }
+
+        .page:last-child {
+            page-break-after: avoid;
+            /* Avoids adding an extra blank page at the end */
         }
 
         header {
@@ -39,156 +57,156 @@
         }
 
         .section {
-            margin-bottom: 20px;
+            margin-bottom: 30px;
+        }
+
+        .section:last-child {
+            margin-bottom: none;
         }
 
         h2 {
             border-bottom: 2px solid #eee;
             color: #666;
-            padding-bottom: 5px;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
         }
 
         h3 {
-            margin-top: 0;
+            margin-top: 10px;
             color: #333;
         }
 
-        ul,
-        p {
+        p,
+        ul {
             line-height: 1.6;
+            padding-left: 10px;
         }
 
         ul {
-            padding-left: 20px;
+            padding-left: 10px;
         }
 
         li {
-            margin-bottom: 5px;
+            margin-bottom: 2px;
+            padding-left: 10px;
         }
 
         .job-entry {
             page-break-inside: avoid;
+            /* Avoid breaking inside a job entry */
+            margin-bottom: 2px;
+            /* Space between entries */
         }
     </style>
+    <!-- Include these scripts in the <head> of your HTML -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
 </head>
 
 <body>
-    <button id="download">Download Resume as PDF</button>
-    <div class="container" id="container">
-        <header>
-            <h1>{{ cv_data_constant.fullName }}</h1>
-            <p>Email: <a href="mailto:{{ cv_data_constant.email }}">{{ cv_data_constant.email }}</a> | Phone: {{
-                cv_data_constant.phoneNumber }} | LinkedIn: <a href="{{ cv_data_constant.linkedin }}" target="_blank">{{
-                    cv_data_constant.linkedin }}</a></p>
-        </header>
-        {% if cv_data_constant.professionalSummary %}
-        <div class="section">
-            <h2>Professional Summary</h2>
-            <p>{{ cv_data_constant.professionalSummary }}</p>
-        </div>
-        {% endif %}
-        {% if cv_data_constant.skills %}
-        <div class="section">
-            <h2>Skills</h2>
-            <ul>
-                {{ cv_data_constant.skills }}
-            </ul>
-        </div>
-        {% endif %}
-        {% if cv_data_constant.workExperiences %}
-        <div class="section">
-            <h2>Work Experience</h2>
-            {% for experience in cv_data_constant.workExperiences %}
-            <div class="job-entry">
-                <h3>{{ experience.companyName }} | {{ experience.position }} | {{ experience.city }}</h3>
-                <p>Period: {{ experience.startMonth }}/{{ experience.startYear }} to {% if experience.currentWorking ==
-                    "working" %}Present{% else %}{{ experience.endMonth }}/{{ experience.endYear }}{% endif %}</p>
+
+    <body>
+
+
+        <div class="container" id="container">
+            <header>
+                <h1>{{ cv_data_constant.fullName }}</h1>
+                <p>Email: <a href="mailto:{{ cv_data_constant.email }}">{{ cv_data_constant.email }}</a> | Phone: {{
+                    cv_data_constant.phoneNumber }} <br> LinkedIn:
+                    <a href="{{ cv_data_constant.linkedin }}" target="_blank">{{ cv_data_constant.linkedin }}</a>
+                </p>
+            </header>
+            <div class="section" {% if not cv_data_constant.professionalSummary %}style="display:none" {% endif %}>
+                <h2>Professional Summary</h2>
                 <ul>
-                    {% for line in experience.description.split('*') if line %}
-                    <div class="job-entry section">
-                        <li>{{ line }}</li>
-                    </div>
-                    {% endfor %}
+                    <p>{{ cv_data_constant.professionalSummary }}</p>
                 </ul>
             </div>
-            {% endfor %}
-        </div>
-        {% endif %}
-
-        {% if cv_data_constant.educations|length > 0 %}
-        <div class="section">
-            <h2>Education</h2>
-            {% for education in cv_data_constant.educations %}
-            <div>
-                <h3>{{ education.degree }} - {{ education.fieldOfStudy }}</h3>
-                <p>{{ education.institutionName }}, {{ education.city }}: {{ education.startMonth }}/{{
-                    education.startYear }} - {{ education.endMonth }}/{{ education.endYear if education.endYear else
-                    'Present' }}</p>
+            <div class="section" {% if not cv_data_constant.skills %}style="display:none" {% endif %}>
+                <h2>Skills</h2>
+                <ul>{{ cv_data_constant.skills }}<ul>
             </div>
-            {% endfor %}
-        </div>
-        {% endif %}
 
-        {% if cv_data_constant.certificates|length > 0 %}
-        <div class="section">
-            <h2>Certificates</h2>
-            {% for certificate in cv_data_constant.certificates %}
-            <div>
-                <h3>{{ certificate.certificateName }}</h3>
-                <p>Issued by: {{ certificate.issuingOrganization }}, {{ certificate.issueMonth }}/{{
-                    certificate.issueYear }}</p>
-            </div>
-            {% endfor %}
-        </div>
-        {% endif %}
+            <div class="section" {% if cv_data_constant.workExperiences|length==0 %}style="display:none" {% endif %}>
+                <h2>Work Experience</h2>
+                <div>
+                    {% for experience in cv_data_constant.workExperiences %}
 
-        {% if cv_data_constant.projects|length > 0 %}
-        <div class="section">
-            <h2>Projects</h2>
-            {% for project in cv_data_constant.projects %}
-            <div>
-                <h3>{{ project.projectTitle }}</h3>
-                <ul>
-                    {% for line in project.description.split('*') if line %}
-                    <div class="job-entry section">
-                        <li>{{ line }}</li>
-                    </div>
+                    <h3>{{ experience.companyName }} | {{ experience.position }} | {{ experience.city }}</h3>
+                    <p>Period: {{ experience.startMonth }}/{{ experience.startYear }} to
+                        {% if experience.currentWorking == "working" %}
+                        Present
+                        {% else %}
+                        {{ experience.endMonth }}/{{ experience.endYear }}
+                        {% endif %}
+                    </p>
+                    <!-- Converting descriptions with newlines into a bulleted list -->
+                    <ul>
+
+                        {% set lines = experience.description.split('*') %}
+                        {% for line in lines %}
+                        <div class="job-entry section">
+                            <li>{{ line }}</li>
+                        </div>
+                        {% endfor %}
+
+                    </ul>
+
                     {% endfor %}
-                </ul>
-            </div>
-            {% endfor %}
-        </div>
-        {% endif %}
 
-        {% if cv_data_constant.references|length > 0 %}
-        <div class="section">
-            <h2>References</h2>
-            {% for reference in cv_data_constant.references %}
+                </div>
+
+                <div class="section" {% if cv_data_constant.educations|length==0 %}style="display:none" {% endif %}>
+                    <h2>Education</h2>
+                    {% for education in cv_data_constant.educations %}
+                    <h3>{{ education.degree }} - {{ education.fieldOfStudy }}</h3>
+                    <p>{{ education.institutionName }}, {{ education.city }}: {{ education.startMonth }}/{{
+                        education.startYear }} - {{ education.endMonth }}/{{ education.endYear if education.endYear else
+                        'Present' }}</p>
+                    {% endfor %}
+                </div>
+                <div class="section" {% if cv_data_constant.certificates|length==0 %}style="display:none" {% endif %}>
+                    <h2>Certificates</h2>
+                    {% for certificate in cv_data_constant.certificates %}
+                    <h3>{{ certificate.certificateName }}</h3>
+                    <p>Issued by: {{ certificate.issuingOrganization }}, {{ certificate.issueMonth }}/{{
+                        certificate.issueYear }}</p>
+                    {% endfor %}
+                </div>
+                <div class="section" {% if cv_data_constant.projects|length==0 %}style="display:none" {% endif %}>
+                    <h2>Projects</h2>
+                    {% for project in cv_data_constant.projects %}
+                    <h3>{{ project.projectTitle }}</h3>
+                    <p>{{ project.description }}</p>
+                    {% endfor %}
+                </div>
+                <div class="section" {% if cv_data_constant.references|length==0 %}style="display:none" {% endif %}>
+                    <h2>References</h2>
+                    {% for reference in cv_data_constant.references %}
+                    <h3>{{ reference.referenceName }} - {{ reference.referenceTitle }}</h3>
+                    <p>{{ reference.referenceCompany }}, Contact: {{ reference.contactInformation }}</p>
+                    {% endfor %}
+                </div>
+            </div>
             <div>
-                <h3>{{ reference.referenceName }} - {{ reference.referenceTitle }}</h3>
-                <p>{{ reference.referenceCompany }}, Contact: {{ reference.contactInformation }}</p>
+                <!-- Added button for PDF Download functionality -->
+                <button type="button" id="download">Download with html2pdf</button>
             </div>
-            {% endfor %}
-        </div>
-        {% endif %}
 
-
-        <script>
-            window.onload = function () {
-                document.getElementById("download").addEventListener("click", () => {
-                    const content = document.getElementById("container");
-                    var options = {
-                        margin: [0.2, 0.5, 0.5, 0.5], // Top, Left, Bottom, Right in inches
-                        filename: '{{ cv_data_constant.fullName }} Resume.pdf',
-                        image: { type: 'jpeg', quality: 0.98 },
-                        html2canvas: { scale: 1 }, // Higher scale gives better resolution
-                        jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
-                    };
-                    html2pdf().from(content).set(options).save();
-                });
-            };
-        </script>
-</body>
+            <script>
+                window.onload = function () {
+                    document.getElementById("download").addEventListener("click", () => {
+                        const content = document.getElementById("container");
+                        var options = {
+                            margin: [0.2, 0.5, 0.5, 0.5], // Top, Left, Bottom, Right in inches
+                            filename: '{{ cv_data_constant.fullName }} Resume.pdf',
+                            image: { type: 'jpeg', quality: 0.98 },
+                            html2canvas: { scale: 1 }, // Higher scale gives better resolution
+                            jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
+                        };
+                        html2pdf().from(content).set(options).save();
+                    });
+                };
+            </script>
+    </body>
 
 </html>
