--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -34,8 +34,8 @@
 
 
                 <h2>Professional Summary</h2>
-                <textarea id="professional_summary" name="professional_summary" rows="4"
-                    placeholder="A concise 3-4 sentence paragraph highlighting your professional experience..."></textarea><br>
+                <textarea id="professional_summary" name="professional_summary" rows="6"
+                    placeholder="A concise 3-4 sentence paragraph highlighting your professional experience and inspiration within 200 words"></textarea><br>
 
                 <div id="workExperienceSection">
                     <h2>Work Experience</h2>
