--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,6 @@ body {
   max-width: 800px;
   margin: auto;
   background: #fff;
-  padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -111,6 +110,10 @@ header p {
 }
 
 /* Section styling */
+.sub_section {
+  margin-bottom: 20px;
+}
+
 .section {
   margin-bottom: 15px;
 }
