--- a/static/css/cv.css
+++ b/static/css/cv.css
@@ -1,10 +1,10 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 20px;
+    margin: 10px;
     padding: 0;
     font-size: 16px;
-    color: #333;
-    background: #fff;
+    color: black;
+    background: #f9f9f9;
 }
 
 .container {
@@ -41,11 +41,11 @@ header h1 {
 }
 
 header p {
-    color: #7f8c8d;
+    color: black;
 }
 
 .section {
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 
 .section:last-child {
@@ -56,11 +56,11 @@ h2 {
     border-bottom: 2px solid #ecf0f1;
     color: #2980b9;
     padding-bottom: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 h3 {
-    margin-top: 10px;
+    margin-top: 20px;
     color: #2c3e50;
 }
 
@@ -96,4 +96,10 @@ button {
 
 button:hover {
     background-color: #2980b9;
+}
+
+
+a, a:visited {
+  color: inherit;
+  font-weight: 500;
 }
