--- a/templates/update.html
+++ b/templates/update.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    //Used for updating user details
+    <!-- //Used for updating user details -->
     <div class="container">
         <div class="form-container">
             <form method="POST">
