--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,7 +53,7 @@ input[type="text"], input[type="email"], input[type="url"], textarea {
 }
 
 button {
-  background-color: #5cb85c;
+  background-color: #ff6600;;
   color: white;
   padding: 10px;
   border: none;
@@ -63,7 +63,7 @@ button {
 }
 
 button:hover {
-  background-color: #449d44;
+  background-color: #ff6600;;
 }
 
 /* Date inputs */
