--- a/templates/login.html
+++ b/templates/login.html
@@ -14,27 +14,32 @@
             align-items: center;
             height: 100vh;
         }
+
         .form-container {
             background: white;
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+
         .header-img {
             width: 100%;
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
         }
     </style>
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/index.css')}}">
+
 </head>
 
 <body>
     <div class="form-container">
-        <img src="resume_creator_image.jpg" alt="Resume Creator" class="header-img">
+        <a><img src="{{url_for('static', filename='images/jobreadycv.png')}}" alt="resume" width="200px" height="90px"
+                onclick="location.href='login'"></a>
         <h2 class="text-center">Login Page</h2>
         <!-- Display flash messages here -->
         {% for message in get_flashed_messages() %}
-            <div class="alert alert-danger">{{ message }}</div>
+        <div class="alert alert-danger">{{ message }}</div>
         {% endfor %}
         <form method="POST" action="{{ url_for('login') }}">
             <!-- Hidden Tag for CSRF protection is automatically included by Flask-WTF if needed -->
