--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             </h1>
             <nav class="nav">
                 <button class="btn btnUp" onclick="location.href='register'">Sign up</button>
-                <button class="btn btn-primary btnIn" onclick="location.href='login'">Sign in</button>
+                <button class="btn btn-primary btnIn" onclick="location.href='login'">log in</button>
             </nav>
         </div>
     </header>
