--- a/templates/show.html
+++ b/templates/show.html
@@ -35,10 +35,11 @@
                     <h3>{{ exp.company_name }} | {{ exp.city }}</h3>
                     <p><strong>Role:</strong> {{ exp.position }}</p>
                     <p><strong>Description:</strong> {{ exp.description }}</p>
-                    <p><strong>Period:</strong> {{ exp.start_month }}/{{ exp.start_year }} - {% if exp.end_month == "Present" %}
+                    <p><strong>Period:</strong> {{ exp.start_month }}/{{ exp.start_year }} - {% if exp.end_month ==
+                        "Present" %}
                         {{ exp.end_month }}
                         {% else %}
-                        {{ exp.end_month }}/{{ exp.end_year }}                          
+                        {{ exp.end_month }}/{{ exp.end_year }}
                         {% endif %}</p>
                 </div>
                 {% endfor %}
@@ -113,7 +114,7 @@
             </section>
             <div style="text-align:center; margin-top: 20px;">
                 <button onclick="location.href='/update/{{ cv.id }}'" type="button">Edit Your Details CV</button>
-                <button onclick="location.href='/job-description/{{ cv.id }}'" type="button">Generate Your CV</button>
+                <button onclick="location.href='/job-description/{{ cv.id }}'" type="button">Generate Your CV </button> 
             </div>
         </div>
     </div>
